# NeuralGambit

./: README.md
Week1/Warmup/: Greedy_or_not.py
Week2/: q1.py  q2.py
Week3/chess-mate-solver/: Makefile  README.md
Week3/chess-mate-solver/src/: main.cpp  mate_solver.hpp  puzzle.hpp
algorithmic-engine/: CMakeLists.txt  Makefile  README.md
chess-engine/: engine.cpp
engine/: engine.cpp  liszt.nnue  nnue.h  nnue_common.py  sample_data.txt  train_numpy.py  train_pytorch.py
